[FIX] account_accountant: add scrollbar on bank reco widget
In the bank reconciliation widget, a task on visual improvement has been done with the following commit : https://github.com/odoo/enterprise/pull/38023/commits/8935dc93fc511d14f780183e1281687489676957. It added an 'overflow: hidden' which was not the appropriate approach. This commit provides a better solution.

owp : 3252225, 3251660, 3251502, 3250888, 3249692, 3249181, 3249050

closes odoo/enterprise#38985

Task: 3218226
X-original-commit: a319473f28fab47532a836403cbfabd9f6e110d2

--- a/account_accountant/static/src/components/bank_reconciliation/bank_rec_widget_form.scss
+++ b/account_accountant/static/src/components/bank_reconciliation/bank_rec_widget_form.scss
@@ -98,15 +98,9 @@
 
 .o_bank_rec_right_div {
     .o_content{
-        overflow: hidden !important;
-
         .o_form_nosheet{
             padding-left: 0 !important;
             padding-right: 0 !important;
-
-            .nav-tabs{
-                margin-left: 10px;
-            }
 
             .o_inner_group {
                 padding: 0 50px;
@@ -125,7 +119,10 @@
                     border-left: none !important;
                 }
             }
+        }
 
+        .o_notebook {
+            --notebook-margin-x: 0 !important;
         }
     }
 }
